
* 0.8.0 (unreleased)
   * Gameplay
      * Made missiles and fighter bays reload while in space
      * Modified the balancing of missiles
      * Added asteroids and mining
      * Improved player GUI
      * Brushed GUI is now the default
      * Improved and fixed escort system
      * Made Pirates and FLF spawn in a fairer way
      * Made time pass at different rates for different ships ("Time Dilation")
      * Made piracy missions available from any Independent or black market planet
      * Substantially increased pay for unique missions (10x in most cases)
      * Made references to the player gender-neutral
      * Made combat music vary from faction to faction
      * Made it so AI ships spawn with cargo
      * Added the ability to buy "fake IDs" from pirate strongholds
      * Made jammers into activated outfits that increase cloaking
      * Added Soromid organic ships that level up organs
      * New and/or improved missions
         * Completed the FLF campaign
         * Fixed up the Collective campaign
         * Improved the Shark (Nexus Shipyards) campaign
         * Improved the Dvaered anti-FLF campaign
         * Added and improved piracy missions
         * New minor Soromid campaign, "Coming Out"
         * New tutorial mission at the start of a new game
         * Various newly added and improved generic missions
   * Engine
      * Added shaders to speed up and improve graphics
      * Added support for non-ascii direct character input
      * Added support for map decorators
      * Removed support for Lua 5.0
      * Removed support for SDL 1, only SDL 2 is supported
      * Added support for translating
      * Made the OSD compact itself to avoid showing redundant information
      * Made Autonav able to follow ships
      * Consolidated the effects of cloaking and jammers under cloaking
      * Added workaround for ALSOFT buggy version that crashes